# IntelligentFishTank-raspberry4b-group36

./: CMakeLists.txt  README-zh.md  README.md
0History/: Real_Time_Embedded_Programming_ENG5220_v2019.docx
0History/samrt_water_tank_oldVersion/flutter_water_tank/: README.md  pubspec.yaml
0History/samrt_water_tank_oldVersion/flutter_water_tank/android/app/: build.gradle
0History/samrt_water_tank_oldVersion/flutter_water_tank/ios/Runner/: Info.plist
0History/samrt_water_tank_oldVersion/flutter_water_tank/ios/Runner.xcodeproj/: project.pbxproj
0History/samrt_water_tank_oldVersion/flutter_water_tank/lib/: main.dart
0History/samrt_water_tank_oldVersion/flutter_water_tank/lib/pages/ble_scan/: controller.dart  view.dart
0History/samrt_water_tank_oldVersion/flutter_water_tank/lib/utils/: ble_callback.dart  ble_model_data.dart  ble_service.dart  ble_utils.dart  ble_utils_cmd.dart  date.utils.dart  shared_perferenc.dart  storage_active.dart
0History/samrt_water_tank_oldVersion/flutter_water_tank/linux/: my_application.cc
0History/samrt_water_tank_oldVersion/flutter_water_tank/macos/Runner.xcodeproj/: project.pbxproj
0History/samrt_water_tank_oldVersion/flutter_water_tank/test/: widget_test.dart
0History/samrt_water_tank_oldVersion/flutter_water_tank/web/: index.html
0History/samrt_water_tank_oldVersion/flutter_water_tank/windows/: CMakeLists.txt
0History/samrt_water_tank_oldVersion/flutter_water_tank/windows/runner/: Runner.rc
0ProjectDocuments/TechnicalDocumentation/: DS18B20_8250021c-fcd0-4fb2-90e9-05d6c39d7d76_public.qukaa
1ProjectDocuments/: 【大纲】总文档.docx  任务进度表.xlsx  元器件统计综合.xlsx
1ProjectDocuments/INS素材/: 语音.docx
1ProjectDocuments/OpeningReport/: 36IntelligentFishTank.pptx
1ProjectDocuments/README/: README-zh.md
1ProjectDocuments/README/0History/: 【大纲】总文档.docx
2TechnicalDocumentation/AltiumDesigner/: FishTank.SchDoc
2TechnicalDocumentation/AltiumDesigner/__Previews/: FishTank.SchDocPreview
Client_Flutter_v1.0/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
Client_Flutter_v1.0/.dart_tool/: package_config.json  package_config_subset
Client_Flutter_v1.0/.dart_tool/flutter_build/7854e6a3687d25988374e7688d1914db/: .filecache  debug_android_application.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
Client_Flutter_v1.0/__MACOSX/macos/Runner.xcworkspace/: ._contents.xcworkspacedata
Client_Flutter_v1.0/android/app/: build.gradle
Client_Flutter_v1.0/android/app/src/main/: AndroidManifest.xml
Client_Flutter_v1.0/lib/pages/ble_scan/: index.dart
Client_Flutter_v1.0/lib/pages/ble_scan/widgets/: animatedRotationBox.dart
Client_Flutter_v1.0/lib/pages/device_manage/: controller.dart  index.dart
Client_Flutter_v1.0/lib/pages/home/: controller.dart  view.dart
Client_Flutter_v1.0/lib/utils/: ble.device.dart  ble.mode.dart  ble_device_bean.dart  ble_model_data.dart  ble_utils.dart  ble_utils_cmd.dart  common.dart  input_widget.dart  instance.dart
Client_Flutter_v1.0/linux/: CMakeLists.txt
Client_Flutter_v1.0/web/: manifest.json
Client_Flutter_v1.0/windows/runner/: main.cpp
E5220 Real Time Embedded Programming/: opening report.pptx  任务进度表.xlsx  元器件统计综合.xlsx  功能模块.txt
IntelligentFishTank/: CMakeLists.txt
IntelligentFishTank/include/: airpump.h  app.h  bluetooth.h  config.h  heater.h  myds18b20.h  pumpModule.h  pwmctrl.h  sg90hv.h  taskQueue.h  taskQueue.hpp  thermalModule.h  thermometer.h  threadPool.h  waterpump.h
IntelligentFishTank/samples/: Test_DS18B20.cpp  Test_SG90HV.cpp  Test_airpump.cpp  Test_app_runBluetooth.cpp  Test_heater.cpp  Test_thermalModule.cpp  Test_threadPool.cpp  Test_waterpump.cpp  VEML7700_Gain_Test.cpp  VEML7700_Integration_Time_Test.cpp
IntelligentFishTank/src/: VEML7700.cpp  airpump.cpp  app.cpp  bluethooth.cpp  bluetooth.cpp  heater.cpp  module.cpp  myds18b20.cpp  pumpModule.cpp  pwmctrl.cpp  taskQueue.cpp  thermalModule.cpp  thermometer.cpp  threadPool.cpp  waterpump.cpp
IntelligentFishTank_Backups/samples/: Test_app.cpp  Test_hardwareCon.cpp  Test_heater.cpp  Test_thermometer.cpp  Test_waterpump.cpp  main
SG90HV/: PG90HV.cpp  SG90HV.cpp  Test_PG90HV  Test_SG90HV  helloPIGPIO.cpp
UnitTest/: CMakeLists.txt
UnitTest/Airpump/: CMakeLists.txt  airpump.cpp  airpump.h  pwmctrl.cpp
UnitTest/AppandModule/: CMakeLists.txt
UnitTest/AppandModule/ThermomalModule/: CMakeLists.txt  Test_thermalModule.cpp  app.cpp  app.h  heater.cpp  thermalModule.cpp  thermalModule.h
UnitTest/AppandModule/include/: VEML7700.h  airpump.h  heater.h  module.h  taskQueue.hpp
UnitTest/AppandModule/samples/: Test_airpump.cpp  Test_pigpio.cpp  Test_waterpump.cpp
UnitTest/AppandModule/src/: airpump.cpp  app.cpp  bluetooth.cpp  pwmctrl.cpp  thermalModule.cpp  threadPool.cpp
UnitTest/Bluetooth/: CMakeLists.txt  Test_bluetooth.cpp  bluetooth.cpp  bluetooth.h  config.h
UnitTest/Heater/: CMakeLists.txt  heater.cpp  heater.h  pwmctrl.cpp  pwmctrl.h
UnitTest/Thermometer/: CMakeLists.txt  myds18b20.cpp  myds18b20.h
UnitTest/ThreadpollandTaskQueue/: CMakeLists.txt  Test_threadPool.cpp  taskQueue.hpp  threadPool.cpp
UnitTest/Waterpump/: CMakeLists.txt  waterpump.cpp  waterpump.h
UnitTest/include/: app.h  myds18b20.h  pumpModule.h  sg90hv.h
UnitTest/samples/: Test_VEML7700.cpp  Test_heater.cpp
UnitTest/src/: VEML7700.cpp  app.cpp  app_old.cpp  sg90hv.cpp  timer.cpp
assets/: GanttChart.xlsx
assets/meeting/: fifth meeting.docx  first meeting.docx  fourth meeting.docx  second meeting.docx  third meeting.docx
include/: airpump.h  app.h  bluetooth.h  config.h  ds18b20_.h  heater.h  module.h  myds18b20.h  pumpModule.h  pwmctrl.h  sg90hv.h  taskQueue.h  taskQueue.hpp  thermalModule.h  thermometer.h  threadPool.h  waterpump.h
samples/: Test_DS18B20.cpp  Test_airpump.cpp  Test_emperature_control.cpp  Test_threadPool.cpp
src/: airpump.cpp  app.cpp  bluetooth.cpp  ds18b20.cpp  heater.cpp  module.cpp  myds18b20.cpp  pumpModule.cpp  pwmctrl.cpp  sg90hv.cpp  taskQueue.cpp  thermalModule.cpp  thermometer.cpp  threadPool.cpp  waterpump.cpp
(+9 files in other folders)
